[gd_scene load_steps=13 format=3 uid="uid://deksi37bicvb3"]

[ext_resource type="Script" path="res://game/scenes/debug/Charting_Scene.gd" id="1_li1ut"]
[ext_resource type="Texture2D" uid="uid://c2r5ulxx1lb0t" path="res://assets/images/menuDark.png" id="2_g7jes"]
[ext_resource type="PackedScene" uid="uid://cxm5dlppp62td" path="res://game/objects/charting/chart_line.tscn" id="3_nef5n"]
[ext_resource type="FontFile" uid="uid://dnssbi7hjccim" path="res://assets/fonts/vcr.ttf" id="5_85d4d"]
[ext_resource type="PackedScene" uid="uid://wcwdtmwuvcvy" path="res://game/objects/charting/tab_Chart.tscn" id="5_s5ygp"]
[ext_resource type="PackedScene" uid="uid://crkjoido6ywl4" path="res://game/objects/charting/tab_Events.tscn" id="6_b5b73"]
[ext_resource type="PackedScene" uid="uid://c1grjonp1kg71" path="res://game/objects/charting/tab_Notes.tscn" id="7_p04ox"]
[ext_resource type="PackedScene" uid="uid://olqp78f66slw" path="res://game/objects/charting/tab_Section.tscn" id="8_dlht4"]
[ext_resource type="PackedScene" uid="uid://dy6ra5sr6shul" path="res://game/objects/charting/tab_Song.tscn" id="9_hxyvv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jwrmc"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3dor2"]
bg_color = Color(0.788235, 0.788235, 0.788235, 1)
corner_radius_top_right = 5
corner_radius_bottom_right = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_omfdg"]
bg_color = Color(0.152941, 0.152941, 0.152941, 0.921569)

[node name="Charting_Scene" type="Node2D"]
script = ExtResource("1_li1ut")

[node name="BG" type="Sprite2D" parent="."]
position = Vector2(639, 362)
texture = ExtResource("2_g7jes")

[node name="Notes" type="Node2D" parent="."]

[node name="ChartLine" parent="." instance=ExtResource("3_nef5n")]
position = Vector2(14, 320)

[node name="Cam" type="Camera2D" parent="."]
position = Vector2(639, 360)

[node name="ChartUI" type="CanvasLayer" parent="."]

[node name="Info" type="Label" parent="ChartUI"]
offset_left = 850.0
offset_top = 20.0
offset_right = 1232.0
offset_bottom = 142.0
theme_override_fonts/font = ExtResource("5_85d4d")
theme_override_font_sizes/font_size = 25
text = "Beat: %s
Step: %s
Section: %s

Snap: 16th"

[node name="SongProgress" type="ProgressBar" parent="ChartUI"]
offset_left = -1.0
offset_top = 706.0
offset_right = 1279.0
offset_bottom = 733.0
theme_override_styles/background = SubResource("StyleBoxFlat_jwrmc")
theme_override_styles/fill = SubResource("StyleBoxFlat_3dor2")
step = 0.0
value = 50.0
show_percentage = false

[node name="Time" type="Label" parent="ChartUI/SongProgress"]
layout_mode = 0
offset_left = 5.0
offset_top = -24.0
offset_right = 120.0
offset_bottom = 1.0
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("5_85d4d")
theme_override_font_sizes/font_size = 25
text = "0:00"

[node name="Length" type="Label" parent="ChartUI/SongProgress"]
layout_mode = 0
offset_left = 1160.0
offset_top = -24.0
offset_right = 1275.0
offset_bottom = 1.0
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("5_85d4d")
theme_override_font_sizes/font_size = 25
text = "0:00"
horizontal_alignment = 2

[node name="Tabs" type="TabContainer" parent="ChartUI"]
offset_left = 850.0
offset_top = 180.0
offset_right = 1230.0
offset_bottom = 650.0
theme_override_styles/panel = SubResource("StyleBoxFlat_omfdg")
tab_alignment = 1
current_tab = 0
tab_focus_mode = 0

[node name="Chart" parent="ChartUI/Tabs" instance=ExtResource("5_s5ygp")]
layout_mode = 2
metadata/_tab_index = 0

[node name="Events" parent="ChartUI/Tabs" instance=ExtResource("6_b5b73")]
visible = false
layout_mode = 2

[node name="Notes" parent="ChartUI/Tabs" instance=ExtResource("7_p04ox")]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Section" parent="ChartUI/Tabs" instance=ExtResource("8_dlht4")]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="Song" parent="ChartUI/Tabs" instance=ExtResource("9_hxyvv")]
visible = false
layout_mode = 2
